fixed buttons on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -10979,6 +10979,7 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
+  margin-bottom: 0.5rem;
   background-color: #495057;
   color: #fff;
   border-radius: 100%;
